<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textNumCita"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@android:color/holo_blue_light"
        android:hint="@string/numero_cita"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162" />

    <EditText
        android:id="@+id/textFecha"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:autofillHints=""
        android:background="@android:color/holo_red_light"
        android:hint="@string/fecha"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30" />

    <EditText
        android:id="@+id/textHora"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:autofillHints=""
        android:background="@android:color/holo_red_light"
        android:hint="@string/hora"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30" />

    <EditText
        android:id="@+id/textAsunto"
        android:layout_width="357dp"
        android:layout_height="221dp"
        android:autofillHints=""
        android:background="@android:color/holo_blue_light"
        android:hint="@string/asunto"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>